--- a/app/vviews/ecommerce/elements/bestseller.ejs
+++ b/app/vviews/ecommerce/elements/bestseller.ejs
@@ -30,8 +30,8 @@
                                         <i class="icon anm anm-search-plus-r"></i>
                                     </a> -->
                                     <div class="wishlist-btn">
-                                        <a class="wishlist add-to-wishlist" href="">
-                                            <i class="icon anm anm-heart-l"></i>
+                                        <a class="wishlist add-to-wishlist" data-product="product-<%= items.id %>" href="javascript:void(0);" title="Add to Love">
+                                            <i class="icon anm anm-heart-l" data-product="product-<%= items.id %>"></i>
                                         </a>
                                     </div>
                                     <div class="compare-btn">
