--- a/app/vviews/ecommerce/elements/script.ejs
+++ b/app/vviews/ecommerce/elements/script.ejs
@@ -1,19 +1,22 @@
  <!-- Including Jquery -->
  <script src="/frontend/assets/js/vendor/jquery-3.3.1.min.js"></script>
+ <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
  <script src="/frontend/assets/js/vendor/modernizr-3.6.0.min.js"></script>
  <script src="/frontend/assets/js/vendor/jquery.cookie.js"></script>
  <script src="/frontend/assets/js/vendor/wow.min.js"></script>
  <!-- Including Javascript -->
- <script src="/frontend/assets/js/bootstrap.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
  <script src="/frontend/assets/js/plugins.js"></script>
- <script src="/frontend/assets/js/popper.min.js"></script>
+ <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
  <script src="/frontend/assets/js/lazysizes.js"></script>
  <script src="/frontend/assets/js/main.js"></script>
  <script src="/adminlte/js/ajax.js"></script>
  <script src="/plugins/toastr/toastr.min.js"></script>
  <script src="/frontend/assets/js/sliderRange.js"></script>
+ <script src="/frontend/assets/js/addwishlist.js"></script>
  
-
+ 
 
  <!-- Photoswipe Gallery -->
  <script src="/frontend/assets/js/vendor/photoswipe.min.js"></script>
