--- a/app/vviews/ecommerce/pages/user/signup.ejs
+++ b/app/vviews/ecommerce/pages/user/signup.ejs
@@ -1,6 +1,20 @@
-<%#
-	errors=errors ?? {};
-
+<%
+    let showError=(checkError)=>{
+        let html='';
+        if(!checkError){
+            return
+        }
+        else{
+            checkError.forEach(element => {
+                html+=`
+                <div class="alert alert-danger" role="alert">
+                ${element.msg}
+                </div>
+                `;
+            });
+        }
+        return html
+    }
 %>
 <div id="page-content">
     <!--Page Title-->
@@ -15,12 +29,14 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 main-col offset-md-3">
                 <div class="mb-4">
+                    <%- showError(error)  %>
+
                    <form method="post" action="/user/signup" id="CustomerLog inForm" accept-charset="UTF-8" class="contact-form">	
                       <div class="row">
                            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                               <label for="CustomerEmail">Tên</label>
-                              <input type="username" name="username" placeholder="" id="CustomerName" class="<%# errors.username && 'is-invalid' %>" autocorrect="off" autocapitalize="off" autofocus="">
+                              <input type="username" name="name" placeholder="" id="CustomerName" class="<%# errors.username && 'is-invalid' %>" autocorrect="off" autocapitalize="off" autofocus="">
                               <%# `<span class="error invalid-feedback">${errors.username}</span>` %>
                             </div>
                         </div>
@@ -34,6 +50,12 @@
                             <div class="form-group">
                                 <label for="CustomerPassword">Mật Khẩu</label>
                                 <input type="password" value="" name="password" placeholder="" id="CustomerPassword" class=""required>                        	
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="form-group">
+                                <label for="CustomerPassword">Nhập Lại Mật Khẩu</label>
+                                <input type="password" value="" name="confirmpassword" placeholder="" id="CustomerPassword" class=""required>                        	
                             </div>
                         </div>
                       </div>
