--- a/app/vviews/ecommerce/pages/category/index.ejs
+++ b/app/vviews/ecommerce/pages/category/index.ejs
@@ -18,22 +18,6 @@
                         <div class="widget-title"><h2>Danh Mục</h2></div>
                         <div class="widget-content">
                             <ul class="sidebar_categories">
-                                <!-- <li class="level1 sub-level"><a href="#;" class="site-nav">Clothing</a>
-                                    <ul class="sublinks">
-                                        <li class="level2"><a href="#;" class="site-nav">Men</a></li>
-                                        <li class="level2"><a href="#;" class="site-nav">Women</a></li>
-                                        <li class="level2"><a href="#;" class="site-nav">Child</a></li>
-                                        <li class="level2"><a href="#;" class="site-nav">View All Clothing</a></li>
-                                    </ul>
-                                </li>
-                                <li class="level1 sub-level"><a href="#;" class="site-nav">Jewellery</a>
-                                    <ul class="sublinks">
-                                        <li class="level2"><a href="#;" class="site-nav">Ring</a></li>
-                                        <li class="level2"><a href="#;" class="site-nav">Neckalses</a></li>
-                                        <li class="level2"><a href="#;" class="site-nav">Eaarings</a></li>
-                                        <li class="level2"><a href="#;" class="site-nav">View All Jewellery</a></li>
-                                    </ul>
-                                </li> -->
                                 <% listCategory.slice(0,6).forEach((category)=> { %>
                                     <li class="lvl-1"><a href="<%= category.id %>" class="site-nav"><%= category.name %></a></li>
                                 <%})%>
@@ -114,33 +98,6 @@
                         </div>
                     </div> -->
                     <!--End Color Swatches-->
-                    <!--Brand-->
-                    <!-- <div class="sidebar_widget filterBox filter-widget">
-                        <div class="widget-title"><h2>Brands</h2></div>
-                        <ul>
-                            <li>
-                              <input type="checkbox" value="allen-vela" id="check1">
-                              <label for="check1"><span><span></span></span>Allen Vela</label>
-                            </li>
-                            <li>
-                              <input type="checkbox" value="oxymat" id="check3">
-                              <label for="check3"><span><span></span></span>Oxymat</label>
-                            </li>
-                            <li>
-                              <input type="checkbox" value="vanelas" id="check4">
-                              <label for="check4"><span><span></span></span>Vanelas</label>
-                            </li>
-                            <li>
-                              <input type="checkbox" value="pagini" id="check5">
-                              <label for="check5"><span><span></span></span>Pagini</label>
-                            </li>
-                            <li>
-                              <input type="checkbox" value="monark" id="check6">
-                              <label for="check6"><span><span></span></span>Monark</label>
-                            </li>
-                        </ul>
-                    </div> -->
-                    <!--End Brand-->
                     <!--Popular Products-->
                     <div class="sidebar_widget">
                         <div class="widget-title"><h2>Hàng Mới Về</h2></div>
@@ -166,65 +123,11 @@
                           </div>
                     </div>
                     <!--End Popular Products-->
-                    <!--Banner-->
-                    <!-- <div class="sidebar_widget static-banner">
-                        <img src="/frontend/assets/images/side-banner-2.jpg" alt="" />
-                    </div> -->
-                    <!--Banner-->
-                    <!--Information-->
-                    <!-- <div class="sidebar_widget">
-                        <div class="widget-title"><h2>Information</h2></div>
-                        <div class="widget-content"><p>Use this text to share information about your brand with your customers. Describe a product, share announcements, or welcome customers to your store.</p></div>
-                    </div> -->
-                    <!--end Information-->
-                    <!--Product Tags-->
-                    <!-- <div class="sidebar_widget">
-                      <div class="widget-title">
-                        <h2>Product Tags</h2>
-                      </div>
-                      <div class="widget-content">
-                        <ul class="product-tags">
-                          <li><a href="#" title="Show products matching tag $100 - $400">$100 - $400</a></li>
-                          <li><a href="#" title="Show products matching tag $400 - $600">$400 - $600</a></li>
-                          <li><a href="#" title="Show products matching tag $600 - $800">$600 - $800</a></li>
-                          <li><a href="#" title="Show products matching tag Above $800">Above $800</a></li>
-                          <li><a href="#" title="Show products matching tag Allen Vela">Allen Vela</a></li>
-                          <li><a href="#" title="Show products matching tag Black">Black</a></li>
-                          <li><a href="#" title="Show products matching tag Blue">Blue</a></li>
-                          <li><a href="#" title="Show products matching tag Cantitate">Cantitate</a></li>
-                          <li><a href="#" title="Show products matching tag Famiza">Famiza</a></li>
-                          <li><a href="#" title="Show products matching tag Gray">Gray</a></li>
-                          <li><a href="#" title="Show products matching tag Green">Green</a></li>
-                          <li><a href="#" title="Show products matching tag Hot">Hot</a></li>
-                          <li><a href="#" title="Show products matching tag jean shop">jean shop</a></li>
-                          <li><a href="#" title="Show products matching tag jesse kamm">jesse kamm</a></li>
-                          <li><a href="#" title="Show products matching tag L">L</a></li>
-                          <li><a href="#" title="Show products matching tag Lardini">Lardini</a></li>
-                          <li><a href="#" title="Show products matching tag lareida">lareida</a></li>
-                          <li><a href="#" title="Show products matching tag Lirisla">Lirisla</a></li>
-                          <li><a href="#" title="Show products matching tag M">M</a></li>
-                          <li><a href="#" title="Show products matching tag mini-dress">mini-dress</a></li>
-                          <li><a href="#" title="Show products matching tag Monark">Monark</a></li>
-                          <li><a href="#" title="Show products matching tag Navy">Navy</a></li>
-                          <li><a href="#" title="Show products matching tag new">new</a></li>
-                          <li><a href="#" title="Show products matching tag new arrivals">new arrivals</a></li>
-                          <li><a href="#" title="Show products matching tag Orange">Orange</a></li>
-                          <li><a href="#" title="Show products matching tag oxford">oxford</a></li>
-                          <li><a href="#" title="Show products matching tag Oxymat">Oxymat</a></li>
-                        </ul>
-                        <span class="btn btn--small btnview">View all</span> </div>
-                    </div> -->
-                    <!--end Product Tags-->
                 </div>
             </div>
             <!--End Sidebar-->
             <!--Main Content-->
             <div class="col-12 col-sm-12 col-md-9 col-lg-9 main-col">
-                <!-- <div class="category-description">
-                    <h3>Category Description</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing.</p>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</p>
-                </div> -->
                 <hr>
                 <div class="productList">
                     <!--Toolbar-->
@@ -232,17 +135,6 @@
                     <div class="toolbar">
                         <div class="filters-toolbar-wrapper">
                             <div class="row">
-                                <!-- <div class="col-4 col-md-4 col-lg-4 filters-toolbar__item collection-view-as d-flex justify-content-start align-items-center">
-                                    <a href="shop-left-sidebar.html" title="Grid View" class="change-view change-view--active">
-                                        <img src="/frontend/assets/images/grid.jpg" alt="Grid" />
-                                    </a>
-                                    <a href="shop-listview.html" title="List View" class="change-view">
-                                        <img src="/frontend/assets/images/list.jpg" alt="List" />
-                                    </a>
-                                </div>
-                                <div class="col-4 col-md-4 col-lg-4 text-center filters-toolbar__item filters-toolbar__item--count d-flex justify-content-center align-items-center">
-                                    <span class="filters-toolbar__product-count">Đang Hiển Thị: 22</span>
-                                </div> -->
                                 <div class="col-4 col-md-4 col-lg-4 text-left">
                                     <header class="show-head d-flex flex-row-reverse flex-wrap justify-content-between mb-7">
                                         <!-- sortGroup -->
@@ -276,12 +168,6 @@
                                     <div class="product-image">
                                         <!-- start product image -->
                                         <a href="/san-pham/<%= items.id %>">
-                                            <!-- image -->
-                                            <!-- <img class="primary blur-up lazyload" data-src="/frontend/assets/images/product-images/product-image21.jpg" src="/frontend/assets/images/product-images/product-image21.jpg" alt="image" title="product" /> -->
-                                            <!-- End image -->
-                                            <!-- Hover image -->
-                                            <!-- <img class="hover blur-up lazyload" data-src="/frontend/assets/images/product-images/product-image21-1.jpg" src="/frontend/assets/images/product-images/product-image21-1.jpg" alt="image" title="product" /> -->
-                                            <!-- End hover image -->
                                             <%- imageMulti(items.images, folderUpload) %>  
 
                                         </a>
@@ -292,19 +178,11 @@
                                             <button class="btn btn-addto-cart" type="button">THÊM VÀO GIỎ HÀNG</button>
                                         </form>
                                         <div class="button-set">
-                                            <!-- <a href="javascript:void(0)" title="Quick View" class="quick-view-popup quick-view" data-toggle="modal" data-target="#content_quickview">
-                                                        <i class="icon anm anm-search-plus-r"></i>
-                                                    </a>
                                             <div class="wishlist-btn">
-                                                <a class="wishlist add-to-wishlist" href="#" title="Add to Wishlist">
-                                                    <i class="icon anm anm-heart-l"></i>
+                                                <a class="wishlist add-to-wishlist" data-product="product-<%= items.id %>" href="javascript:void(0);" title="Add to Love">
+                                                    <i class="icon anm anm-heart-l" data-product="product-<%= items.id %>"></i>
                                                 </a>
                                             </div>
-                                            <div class="compare-btn">
-                                                <a class="compare add-to-compare" href="compare.html" title="Add to Compare">
-                                                    <i class="icon anm anm-random-r"></i>
-                                                </a>
-                                            </div> -->
                                         </div>
                                         <!-- end product button -->
                                     </div>
