--- a/app/vviews/ecommerce/pages/search/index.ejs
+++ b/app/vviews/ecommerce/pages/search/index.ejs
@@ -280,19 +280,11 @@
                                             <button class="btn btn-addto-cart" type="button">THÊM VÀO GIỎ HÀNG</button>
                                         </form>
                                         <div class="button-set">
-                                            <!-- <a href="javascript:void(0)" title="Quick View" class="quick-view-popup quick-view" data-toggle="modal" data-target="#content_quickview">
-                                                        <i class="icon anm anm-search-plus-r"></i>
-                                                    </a> -->
-                                            <!-- <div class="wishlist-btn">
-                                                <a class="wishlist add-to-wishlist" href="#" title="Add to Wishlist">
-                                                    <i class="icon anm anm-heart-l"></i>
+                                            <div class="wishlist-btn">
+                                                <a class="wishlist add-to-wishlist" data-product="product-<%= items.id %>" href="javascript:void(0);" title="Add to Love">
+                                                    <i class="icon anm anm-heart-l" data-product="product-<%= items.id %>"></i>
                                                 </a>
                                             </div>
-                                            <div class="compare-btn">
-                                                <a class="compare add-to-compare" href="#" title="Add to Compare">
-                                                    <i class="icon anm anm-random-r"></i>
-                                                </a>
-                                            </div> -->
                                         </div>
                                         <!-- end product button -->
                                     </div>
