--- a/app/vviews/ecommerce/pages/user/signup.ejs
+++ b/app/vviews/ecommerce/pages/user/signup.ejs
@@ -48,7 +48,7 @@
                         </div>
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
-                                <label for="CustomerPassword">Mật Khẩu</label>
+                                <label for="CustomerPassword">Mật Khẩu (Chiều Dài Từ 6 đến 20 Ký Tự)</label>
                                 <input type="password" value="" name="password" placeholder="" id="CustomerPassword" class=""required>                        	
                             </div>
                         </div>
