--- a/app/vviews/ecommerce/pages/user/signin.ejs
+++ b/app/vviews/ecommerce/pages/user/signin.ejs
@@ -1,3 +1,21 @@
+<%
+    let showError=(checkError)=>{
+        let html='';
+        if(!checkError){
+            return
+        }
+        else{
+            checkError.forEach(element => {
+                html+=`
+                <div class="alert alert-danger" role="alert">
+                ${element.msg}
+                </div>
+                `;
+            });
+        }
+        return html
+    }
+%>
 <div id="page-content">
     <!--Page Title-->
     <div class="page section-header text-center">
@@ -11,6 +29,8 @@
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 main-col offset-md-3">
                 <div class="mb-4">
+                    <%- showError(error)  %>
+
                    <form method="post" action="/user/signin" id="CustomerLoginForm" accept-charset="UTF-8" class="contact-form">	
                       <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
@@ -30,7 +50,6 @@
                         <div class="text-center col-12 col-sm-12 col-md-12 col-lg-12">
                             <input type="submit" class="btn mb-3" value="Đăng Nhập">
                             <p class="mb-4">
-                                <a href="#" id="RecoverPassword">Quên Mật Khẩu?</a> &nbsp; | &nbsp;
                                 <a href="/user/signup" id="customer_register_link">Tạo Tài Khoản</a>
                             </p>
                         </div>
