--- a/app/vviews/ecommerce/pages/user/signup.ejs
+++ b/app/vviews/ecommerce/pages/user/signup.ejs
@@ -36,8 +36,19 @@
                            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                               <label for="CustomerEmail">Tên</label>
-                              <input type="username" name="name" placeholder="" id="CustomerName" class="<%# errors.username && 'is-invalid' %>" autocorrect="off" autocapitalize="off" autofocus="">
-                              <%# `<span class="error invalid-feedback">${errors.username}</span>` %>
+                              <input type="name" name="username" placeholder="" id="CustomerName" autocorrect="off" autocapitalize="off" autofocus="">
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="form-group">
+                              <label for="CustomerPhone">Phone</label>
+                              <input type="phone" name="phone" placeholder="" id="CustomerPhone" autocorrect="off" autocapitalize="off" autofocus="">
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            <div class="form-group">
+                              <label for="CustomerAddress">Địa Chỉ</label>
+                              <input type="address" name="address" placeholder="" id="CustomerAddress" autocorrect="off" autocapitalize="off" autofocus="">
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
