--- a/app/vviews/admin/pages/dashboard/index.ejs
+++ b/app/vviews/admin/pages/dashboard/index.ejs
@@ -9,6 +9,7 @@
         {name: 'Tin Nhắn', icon: 'ion-email', link: `${systemConfig.prefixAdmin}/contact`, background: 'bg-warning'},
         // {name: 'Rss', icon: 'ion-social-rss', link: `${systemConfig.prefixAdmin}/rss`, background: 'bg-info'},
     ];
+    
 
     let xhtmlBox = '<div class="row">';
     arrBox.forEach((value, index) => {
@@ -27,6 +28,7 @@
     });
     xhtmlBox += '</div>';   
 %>
+<% include ./../../helpers/TimeInfo %>
 <%- xhtmlBox %>
     <div class="row">
         <div class="col-md-8">
@@ -60,41 +62,6 @@
                                     <td><span class="badge badge-success">Shipped</span></td>
 
                                 </tr>
-                                <tr>
-                                    <td><a href="">OR1848</a></td>
-                                    <td>Samsung Smart TV</td>
-                                    <td><span class="badge badge-warning">Pending</span></td>
-
-                                </tr>
-                                <tr>
-                                    <td><a href="">OR7429</a></td>
-                                    <td>iPhone 6 Plus</td>
-                                    <td><span class="badge badge-danger">Delivered</span></td>
-
-                                </tr>
-                                <tr>
-                                    <td><a href="">OR7429</a></td>
-                                    <td>Samsung Smart TV</td>
-                                    <td><span class="badge badge-info">Processing</span></td>
-
-                                </tr>
-                                <tr>
-                                    <td><a href="">OR1848</a></td>
-                                    <td>Samsung Smart TV</td>
-                                    <td><span class="badge badge-warning">Pending</span></td>
-
-                                </tr>
-                                <tr>
-                                    <td><a href="">OR7429</a></td>
-                                    <td>iPhone 6 Plus</td>
-                                    <td><span class="badge badge-danger">Delivered</span></td>
-
-                                </tr>
-                                <tr>
-                                    <td><a href="">OR9842</a></td>
-                                    <td>Call of Duty IV</td>
-                                    <td><span class="badge badge-success">Shipped</span></td>
-                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -111,9 +78,9 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-header">
-                <h3 class="card-title">Latest Members</h3>
+                <h3 class="card-title">Thành Viên</h3>
                 <div class="card-tools">
-                <span class="badge badge-danger">8 New Members</span>
+                <!-- <span class="badge badge-danger">8 New Members</span> -->
                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
                 <i class="fas fa-minus"></i>
                 </button>
@@ -125,52 +92,19 @@
                 
                 <div class="card-body p-0" style="display: block;">
                 <ul class="users-list clearfix">
-                <li>
-                <img src="/frontend/dist/img/user1-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Alexander Pierce</a>
-                <span class="users-list-date">Today</span>
-                </li>
-                <li>
-                <img src="/frontend/dist/img/user8-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Norman</a>
-                <span class="users-list-date">Yesterday</span>
-                </li>
-                <li>
-                <img src="/frontend/dist/img/user7-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Jane</a>
-                <span class="users-list-date">12 Jan</span>
-                </li>
-                <li>
-                <img src="/frontend/dist/img/user6-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">John</a>
-                <span class="users-list-date">12 Jan</span>
-                </li>
-                <li>
-                <img src="/frontend/dist/img/user2-160x160.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Alexander</a>
-                <span class="users-list-date">13 Jan</span>
-                </li>
-                <li>
-                <img src="/frontend/dist/img/user5-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Sarah</a>
-                <span class="users-list-date">14 Jan</span>
-                </li>
-                <li>
-                <img src="/frontend/dist/img/user4-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Nora</a>
-                <span class="users-list-date">15 Jan</span>
-                </li>
-                <li>
-                <img src="/frontend/dist/img/user3-128x128.jpg" alt="User Image">
-                <a class="users-list-name" href="#">Nadia</a>
-                <span class="users-list-date">15 Jan</span>
-                </li>
+                    <% userModel.forEach((items)=> { %>
+                        <li>
+                            <img src="/uploads/users/<%= items.avatar %>"  alt="<%= items.username %>">
+                            <a class="users-list-name" href="/adminCCC/users/form/<%= items.id %>"><%= items.username %> </a>
+                            <span class="users-list-date"><%- showTimeInfo(items.createdAt) %></span>
+                        </li>
+                    <%})%>
                 </ul>
                 
                 </div>
                 
                 <div class="card-footer text-center" style="display: block;">
-                <a href="javascript:">View All Users</a>
+                <a href="/adminCCC/users">Xem Chi Tiết</a>
                 </div>
                 
             </div>
