--- a/app/vviews/admin/pages/users/form.ejs
+++ b/app/vviews/admin/pages/users/form.ejs
@@ -11,7 +11,7 @@
 		<div class="card-body">
 		
 			<div class="form-group row">
-				<label for="username" class="col-sm-2 col-form-label text-sm-right required">Name</label>
+				<label for="username" class="col-sm-2 col-form-label text-sm-right required">Tên</label>
 				<div class="col-xs-12 col-sm-8">
 					<input type="text" name="username" value="<%= item.username %>" class="form-control form-control-sm <%= errors.username && 'is-invalid' %>" onKeyUp="handleSlug(
 						'<%= linkPrefix %>',
@@ -30,6 +30,21 @@
 					<%- `<span class="error invalid-feedback">${errors.email}</span>` %>
 				</div>
 			</div>
+			<div class="form-group row">
+				<label for="phone" class="col-sm-2 col-form-label text-sm-right required">Điện Thoại</label>
+				<div class="col-xs-12 col-sm-8">
+					<input type="text" name="phone" value="<%= item.phone %>" class="form-control form-control-sm <%= errors.email && 'is-invalid' %>">
+					<%- `<span class="error invalid-feedback">${errors.email}</span>` %>
+				</div>
+			</div>
+			<div class="form-group row">
+				<label for="address" class="col-sm-2 col-form-label text-sm-right required">Địa Chỉ</label>
+				<div class="col-xs-12 col-sm-8">
+					<input type="text" name="address" value="<%= item.address %>" class="form-control form-control-sm <%= errors.email && 'is-invalid' %>">
+					<%- `<span class="error invalid-feedback">${errors.email}</span>` %>
+				</div>
+			</div>
+			
 
 			<!-- Avatar -->
 			<div class="form-group row">
@@ -67,8 +82,8 @@
 				<div class="col-xs-12 col-sm-8">
 					<select id="form[isAdmin]" name="isAdmin" class="custom-select custom-select-sm <%= errors.isAdmin && 'is-invalid' %>">
 						<option value="novalue">Choose Role</option>
-						<option value="yes" <%= (item.isAdmin == "active") ? 'selected="selected"' : '' %> >Yes</option>
-						<option value="no" <%= (item.isAdmin == "inactive") ? 'selected="selected"' : '' %> >No</option>
+						<option value="yes" <%= (item.isAdmin == "yes") ? 'selected="selected"' : '' %> >Yes</option>
+						<option value="no" <%= (item.isAdmin == "no") ? 'selected="selected"' : '' %> >No</option>
 					</select>
 					<%- `<span class="error invalid-feedback">${errors.isAdmin}</span>` %>
 				</div>
