--- a/app/vviews/ecommerce/pages/user/profile.ejs
+++ b/app/vviews/ecommerce/pages/user/profile.ejs
@@ -22,10 +22,10 @@
               <div class="card">
                 <div class="card-body">
                   <div class="d-flex flex-column align-items-center text-center">
-                    <img src="/uploads/users/<%= userInfo.avatar %>" alt="Admin" class="rounded-circle" width="150">
+                    <img src="/uploads/users/<%= userInfo.avatar %>" alt="<%= userInfo.username %>" class="rounded-circle" width="100">
                     <div class="mt-3">
                       <h4><%= userInfo.username %></h4>
-                      <p class="text-secondary mb-1">Full Stack Developer</p>
+                      <!-- <p class="text-secondary mb-1">Full Stack Developer</p> -->
                       <p class="text-muted font-size-sm"><%= userInfo.email %></p>
                       <!-- <button class="btn btn-primary">Follow</button>
                       <button class="btn btn-outline-primary">Message</button> -->
@@ -60,7 +60,7 @@
                       <h6 class="mb-0">Số Điện Thoại</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      
+                      <%= userInfo.phone %>
                     </div>
                   </div>
                   <hr>
@@ -69,7 +69,7 @@
                       <h6 class="mb-0">Địa Chỉ</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                        
+                      <%= userInfo.address %>
                     </div>
                   </div>
                   <hr>
